change about-us & teams

--- a/src/app/main/components/about-us/about-us.component.html
+++ b/src/app/main/components/about-us/about-us.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-    <p class="title">О нас</p>
-    <p class="subtitle">Каждый может найти свою команду</p>
+    <p class="title">Каждый может найти свою команду</p>
 
     <a href="https://www.instagram.com/free.team.club" target="_blank" class="soc__icon insta_box">
         <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="20px" style="margin-right: 5px;">
