--- a/src/app/main/components/add-team/add-team.component.html
+++ b/src/app/main/components/add-team/add-team.component.html
@@ -13,7 +13,7 @@
             </mat-form-field>
 
             <div>
-                <button mat-raised-button class="btn" [disabled]="addTeamForm.invalid">Добавить команду</button>
+                <button mat-raised-button color="primary" style="width: 280px;" [disabled]="addTeamForm.invalid">Добавить команду</button>
             </div>
         </div>
     </form>
