--- a/src/app/main/components/about-us/about-us.component.scss
+++ b/src/app/main/components/about-us/about-us.component.scss
@@ -1,28 +1,20 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    width: 610px;
+    width: 750px;
     border-radius: 5px;
     padding: 20px 30px;
-    margin: 100px auto 0 auto;
+    margin: 50px auto 0 auto;
 }
 .title {
-    font-size: 30px;
+    font-size: 48px;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     color: $light;
     user-select: none;
-}
-.subtitle {
-    font-size: 20px;
-    text-align: center;
-    padding-bottom: 10px;
-    color: $light;
-    font-style: italic;
-    user-select: none;
+    font-weight: bold;
 }
 .soc__icon {
     text-decoration: none;
@@ -32,27 +24,24 @@ $lightdark: #1C1C24;
     img{filter: invert(97%) sepia(14%) saturate(663%) hue-rotate(175deg) brightness(102%) contrast(94%);}
 }
 .soc__icon:hover {
-    img{filter: invert(32%) sepia(26%) saturate(4482%) hue-rotate(168deg) brightness(96%) contrast(107%);}
+    img{filter: invert(43%) sepia(90%) saturate(2135%) hue-rotate(187deg) brightness(103%) contrast(91%);}
     p{color: $blue;}
 }
 .box__cell {
     display: flex;
     flex-wrap: wrap;
+    margin: 20px 0;
 }
 .cell {
     display: flex;
     align-items: center;
     padding: 10px;
-    border: 1px solid $grey;
     width: 270px;
     margin: 5px;
     border-radius: 5px;
     text-decoration: none;
     background: $lightdark;
 }
-// .cell:hover {
-//     background: $grey;
-// }
 .avatar__mr {
     width: 50px;
     height: 50px;
@@ -83,6 +72,9 @@ $lightdark: #1C1C24;
     font-size: 16px;
     color: $light;
     cursor: pointer;
+}
+.privacy_policy:hover {
+    color: $blue;
 }
 @media(max-width: 700px) {
     .container {
