--- a/src/app/main/components/players/players.component.scss
+++ b/src/app/main/components/players/players.component.scss
@@ -1,15 +1,10 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    width: 600px;
-    border: 1px solid $grey;
-    border-radius: 5px;
-    padding: 20px 30px;
-    margin: 100px auto 0 auto;
-    background: $lightdark;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .subtitle {
     display: none;
@@ -22,7 +17,7 @@ $lightdark: #1C1C24;
 }
 .text__title {
     font-size: 16px;
-    color: $grey;
+    color: $blue;
     padding: 5px 0;
     user-select: none;
 }
@@ -53,7 +48,7 @@ table {
     }
 }
 td {
-    border-bottom: 1px solid $grey;
+    border-bottom: 1px solid $blue;
     padding: 10px 30px;
     font-size: 18px;
     text-align: center;
@@ -61,14 +56,14 @@ td {
     color: $light;
 }
 .tr:hover {
-    background-color: $grey;
+    background-color: $blue;
 }
 .mobile {
     display: none;
 }
 .cell {
-    border-top: 1px solid $grey;
-    border-bottom: 1px solid $grey;
+    border-top: 1px solid $blue;
+    border-bottom: 1px solid $blue;
     margin-bottom: 5px;
     border-radius: 5px;
     background: $lightdark;
@@ -87,13 +82,13 @@ td {
     height: 29px;
     font-size: 16px;
     cursor: pointer;
-    border: 1px solid $grey;
+    border: 1px solid $blue;
     background: $blue;
     margin-top: 20px;
     color: $light;
 }
 .btn:hover {
-    background: $grey;
+    background: $blue;
 }
 @media(max-width: 700px) {
     .container {
