--- a/src/app/main/components/add-event/add-event.component.html
+++ b/src/app/main/components/add-event/add-event.component.html
@@ -1,58 +1,73 @@
 <div class="container">
     <p class="title">Добавить событие</p>
-    <form [formGroup]="addEventForm" novalidate (ngSubmit)="sendService()">
-        <div class="box">
-            <mat-form-field appearance="fill" style="width: 280px;">
-                <mat-label>Вид спорта</mat-label>
-                <mat-select formControlName="sport">
-                    <mat-option *ngFor="let sport of sports?.results" [value]="sport.id">
-                        {{sport.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
 
-            <mat-form-field appearance="fill" style="width: 280px;">
-                <mat-label>Тип события</mat-label>
-                <mat-select formControlName="type">
-                    <mat-option *ngFor="let type of types?.results" [value]="type.id">
-                        {{type.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-
-            <mat-form-field color="accent" appearance="fill" style="width: 280px;">
-                <mat-label>Дата</mat-label>
-                <input formControlName="date" matInput [matDatepicker]="picker2" [matDatepickerFilter]="myFilter">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2 color="primary"></mat-datepicker>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" style="width: 280px;">
-                <mat-label>Время начала события</mat-label>
-                <input formControlName="time_start" type="time" matInput name="time_start" min="00:00" max="23:59">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" style="width: 280px;">
-                <mat-label>Время конца события</mat-label>
-                <input formControlName="time_end" type="time" matInput name="time_end" min="00:00" max="23:59">
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" style="width: 280px;">
-                <mat-label>Место</mat-label>
-                <mat-select formControlName="location">
-                    <mat-option *ngFor="let location of locations?.results" [value]="location.id">
-                        {{location.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
-                <mat-label>Цена</mat-label>
-                <input matInput formControlName="price">
-            </mat-form-field>
-
-            <button mat-raised-button class="btn" type="button" (click)="openDialog()">Добавить гостей</button>
-            <button mat-raised-button class="btn" [disabled]="addEventForm.invalid">Добавить событие</button>
+    <div class="box">
+        <div style="width: 900px; height: 660px;">
+            <ya-map [center]="[45.05, 41.95]" [zoom]="12" (yaclick)="onMapClick($event)" [state]="{ controls: ['smallMapDefaultSet'] }">
+                <ya-placemark *ngFor="let place of places" 
+                    [geometry]="[place.x, place.y]" 
+                    [properties]="{hintContent : place.hintContent}"
+                    [options]="{iconColor: place.iconColor}"
+                ></ya-placemark>
+            </ya-map>
         </div>
-    </form>
+        <div>
+            <form [formGroup]="addEventForm" novalidate (ngSubmit)="sendService()">
+                <div class="flex">
+                    <mat-form-field appearance="fill" style="width: 280px;">
+                        <mat-label>Вид спорта</mat-label>
+                        <mat-select formControlName="sport">
+                            <mat-option *ngFor="let sport of sports?.results" [value]="sport.id">
+                                {{sport.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+        
+                    <mat-form-field appearance="fill" style="width: 280px;">
+                        <mat-label>Тип события</mat-label>
+                        <mat-select formControlName="type">
+                            <mat-option *ngFor="let type of types?.results" [value]="type.id">
+                                {{type.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+        
+                    <mat-form-field color="accent" appearance="fill" style="width: 280px;">
+                        <mat-label>Дата</mat-label>
+                        <input formControlName="date" matInput [matDatepicker]="picker2" [matDatepickerFilter]="myFilter">
+                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker2 color="primary"></mat-datepicker>
+                    </mat-form-field>
+        
+                    <mat-form-field appearance="outline" style="width: 280px;">
+                        <mat-label>Время начала события</mat-label>
+                        <input formControlName="time_start" type="time" matInput name="time_start" min="00:00" max="23:59">
+                    </mat-form-field>
+        
+                    <mat-form-field appearance="outline" style="width: 280px;">
+                        <mat-label>Время конца события</mat-label>
+                        <input formControlName="time_end" type="time" matInput name="time_end" min="00:00" max="23:59">
+                    </mat-form-field>
+        
+                    <mat-form-field appearance="fill" style="width: 280px;">
+                        <mat-label>Место</mat-label>
+                        <mat-select formControlName="location">
+                            <mat-option *ngFor="let location of locations?.results" [value]="location.id">
+                                {{location.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+        
+                    <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
+                        <mat-label>Цена</mat-label>
+                        <input matInput formControlName="price">
+                    </mat-form-field>
+        
+                    <button mat-raised-button style="width: 280px;" color="primary" style="margin-bottom: 10px;" type="button" (click)="openDialog()">Добавить гостей</button>
+                    <button mat-raised-button style="width: 280px;" color="primary" [disabled]="addEventForm.invalid">Добавить событие</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <button mat-raised-button color="primary" style="margin-top: 10px;" *ngIf="isLocation" (click)="saveLocation()">Сохранить локацию</button>
 </div>
