--- a/src/app/main/components/add-event/add-event.component.scss
+++ b/src/app/main/components/add-event/add-event.component.scss
@@ -1,32 +1,43 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    background: $lightdark;
-    width: 300px;
-    border-radius: 5px;
-    padding: 20px 0;
-    margin: 100px auto 0 auto;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .title {
+    font-size: 48px;
     color: $light;
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 20px;
     user-select: none;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.cell {
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: $lightdark;
+    width: 280px;
+    min-height: 110px;
+    padding: 10px;
+    cursor: pointer;
+}
+.cell:hover {
+    background: $blue;
 }
 .box {
     display: flex;
+    justify-content: space-between;
+}
+.text {
+    font-size: 16px;
+    color: $light;
+    padding: 3px 0;
+}
+.flex {
+    display: flex;
     flex-direction: column;
-    align-items: center;
 }
 input {
     color: $light;
-}
-.btn {
-    background: $grey;
-    width: 280px;
-    margin-bottom: 10px;
 }
