--- a/src/app/main/components/home/home.component.scss
+++ b/src/app/main/components/home/home.component.scss
@@ -1,22 +1,19 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    margin: 100px auto 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .title {
-    font-size: 30px;
-    text-align: center;
+    font-size: 48px;
     color: $light;
     user-select: none;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 .cell {
-    border: 1px solid $grey;
     margin-bottom: 5px;
     border-radius: 5px;
     background: $lightdark;
@@ -26,9 +23,14 @@ $lightdark: #1C1C24;
     cursor: pointer;
 }
 .cell:hover {
-    background: $grey;
+    background: $blue;
 }
 .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.box {
     display: flex;
     justify-content: space-between;
 }
