--- a/src/app/main/components/locations/locations.component.scss
+++ b/src/app/main/components/locations/locations.component.scss
@@ -1,13 +1,10 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    width: 600px;
-    border-radius: 5px;
-    padding: 20px 30px;
-    margin: 100px auto 0 auto;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .head {
     display: flex; 
@@ -50,7 +47,7 @@ table {
     }
 }
 td {
-    border-bottom: 1px solid $grey;
+    border-bottom: 1px solid $blue;
     padding: 10px 30px;
     font-size: 18px;
     text-align: center;
@@ -61,14 +58,14 @@ td {
     background: $lightdark;
 }
 .tr:hover {
-    background-color: $grey;
+    background-color: $blue;
 }
 .mobile {
     display: none;
 }
 .cell {
-    border-top: 1px solid $grey;
-    border-bottom: 1px solid $grey;
+    border-top: 1px solid $blue;
+    border-bottom: 1px solid $blue;
     margin-bottom: 5px;
     border-radius: 5px;
     background: $lightdark;
