--- a/src/app/main/components/player/player.component.scss
+++ b/src/app/main/components/player/player.component.scss
@@ -1,13 +1,10 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    width: 300px;
-    border-radius: 5px;
-    padding: 20px 0;
-    margin: 100px auto 0 auto;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .title {
     font-size: 30px;
@@ -20,7 +17,7 @@ $lightdark: #1C1C24;
 }
 .text__title {
     font-size: 16px;
-    color: $grey;
+    color: $blue;
     padding: 5px 0;
     user-select: none;
 }
