--- a/src/app/main/components/privacy-policy/privacy-policy.component.scss
+++ b/src/app/main/components/privacy-policy/privacy-policy.component.scss
@@ -1,15 +1,10 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    max-width: 1200px;
-    border: 1px solid $grey;
-    border-radius: 5px;
-    padding: 20px;
+    width: 1200px;
     margin: 50px auto 0 auto;
-    background: $lightdark;
 }
 h1, h2, p{
     color: $light;
