--- a/src/app/main/components/profile/profile.component.scss
+++ b/src/app/main/components/profile/profile.component.scss
@@ -3,20 +3,18 @@ $dark: #212121;
 $blue: #2196F3;
 $lightdark: #4D61A6;
 .container {
-    padding: 20px 30px;
+    width: 1200px;
     margin: 50px auto 0 auto;
 }
 .title {
     color: $light;
     font-size: 48px;
     font-weight: bold;
-    text-align: center;
     padding-bottom: 20px;
     user-select: none;
 }
 .flex {
     display: flex;
-    justify-content: center;
 }
 .box {
     display: flex;
