--- a/src/app/main/components/security-password/security-password.component.scss
+++ b/src/app/main/components/security-password/security-password.component.scss
@@ -1,15 +1,10 @@
-$grey: #788CA0;
-$light: #EEF5F8;
-$blue: #007EA7;
-$dark: #121218;
-$lightdark: #1C1C24;
+$light: #FFFFFF;
+$dark: #212121;
+$blue: #2196F3;
+$lightdark: #4D61A6;
 .container {
-    width: 300px;
-    border: 1px solid $grey;
-    border-radius: 5px;
-    padding: 20px 0;
-    margin: 100px auto 0 auto;
-    background: $lightdark;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .title {
     font-size: 30px;
@@ -27,7 +22,7 @@ input {
     color: $light;
 }
 .btn {
-    background: $grey;
+    background: $blue;
     width: 280px;
 }
 .btn__icon {
