--- a/src/app/main/components/user-change/user-change.component.scss
+++ b/src/app/main/components/user-change/user-change.component.scss
@@ -3,21 +3,19 @@ $dark: #212121;
 $blue: #2196F3;
 $lightdark: #4D61A6;
 .container {
-    padding: 20px 0;
-    margin: 100px auto 0 auto;
+    width: 1200px;
+    margin: 50px auto 0 auto;
 }
 .title {
     color: $light;
     font-size: 48px;
     font-weight: bold;
-    text-align: center;
     padding-bottom: 20px;
     user-select: none;
 }
 .flex {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 input {
     color: $light;
