--- a/src/app/components/add-team/add-team.component.html
+++ b/src/app/components/add-team/add-team.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <p class="title">Добавить команду</p>
+    <h1>Добавить команду</h1>
     <form [formGroup]="addTeamForm" novalidate (ngSubmit)="sendService()">
         <div class="box">
             <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
