--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <p class="title">Изменить пароль</p>
+    <h1>Изменить пароль</h1>
     <form [formGroup]="changeForm" novalidate (ngSubmit)="sendService()">
         <div class="box">
             <mat-form-field class="example-full-width" appearance="fill" style="width: 250px;">
@@ -8,7 +8,7 @@
             </mat-form-field>
 
             <div style="margin-top: 10px">
-                <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Отправить письмо на почту</button>
+                <button mat-raised-button style="width: 250px;" color="primary" [disabled]="changeForm.invalid || changeForm.disabled">Отправить письмо на почту</button>
             </div>
         </div>
     </form>
