--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -228,7 +228,7 @@
             <event-chat-service-page></event-chat-service-page>
         </div>
         <div class="control" *ngIf="nav.control">
-            <h1 style="color: #FFFFFF;">control</h1>
+            <h1>control</h1>
         </div>
         <div class="user" *ngIf="status">
             <img *ngIf="user.profile.photo_medium" src="{{user?.profile.photo_medium}}" alt="avatar" class="user__avatar">
