--- a/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/components/privacy-policy/privacy-policy.component.html
@@ -94,6 +94,6 @@
         7.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. В случае существенных изменений Пользователю может быть выслана информация на указанный им электронный адрес.
     </p>
     <a href="../../../../assets/privacy_policy.docx" download>
-        <button mat-raised-button>Скачать документ</button>
+        <button mat-raised-button color="primary">Скачать документ</button>
     </a>
 </div>
