--- a/src/app/components/security-password/security-password.component.html
+++ b/src/app/components/security-password/security-password.component.html
@@ -19,7 +19,7 @@
             </mat-form-field>
 
             <div style="margin-top: 10px">
-                <button mat-raised-button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+                <button mat-raised-button style="width: 280px;" color="primary" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
             </div>
         </div>
     </form>
