--- a/src/app/components/user-change/user-change.component.html
+++ b/src/app/components/user-change/user-change.component.html
@@ -8,14 +8,14 @@
                 <input matInput formControlName="email">
             </mat-form-field>
 
-            <button mat-raised-button class="btn" type="button" color="primary" style="margin-bottom: 10px;">Подтвердить почту</button>
+            <button mat-raised-button style="width: 280px; margin-bottom: 10px;" color="primary" type="button">Подтвердить почту</button>
 
             <mat-form-field class="example-full-width" appearance="fill" style="width: 280px;">
                 <mat-label>Телефон</mat-label>
                 <input matInput formControlName="phone_number">
             </mat-form-field>
 
-            <button mat-raised-button class="btn" type="button" color="primary" style="margin-bottom: 10px;">Подтвердить телефон</button>
+            <button mat-raised-button style="width: 280px; margin-bottom: 10px;" color="primary" type="button">Подтвердить телефон</button>
            
             <div style="display: flex; width: 280px;">
                 <button mat-raised-button type="button" [routerLink]="['/profile']" style="width: 100%;">Отмена</button>
