--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,36 +1,37 @@
 <div class="container">
-    <p class="title">Каждый может найти свою команду</p>
+    <h1>Каждый может найти свою команду</h1>
 
-    <a href="https://www.instagram.com/free.team.club" target="_blank" class="soc__icon">
-        <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="20px" style="margin-right: 5px;">
-        <p class="text">free.team.club</p>
+    <a class="social" href="https://www.instagram.com/free.team.club" target="_blank">
+        <img [ngClass]="[isDarkTheme ? 'lightIcon' : 'darkIcon']" src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="20px" style="margin-right: 5px;">
+        <p class="social__text" [ngClass]="[isDarkTheme ? 'lightText' : 'darkText']">free.team.club</p>
     </a>
+
     <div class="box__cell">
         <div class="cell">
             <div class="avatar__mr"></div>
             <div>
-                <p class="text">Николай Маршанский</p>
-                <a class="soc__icon" target="_blank" href="https://instagram.com/mr.marshanskiy">
+                <p class="cell__text">Николай Маршанский</p>
+                <a class="cell__icon" target="_blank" href="https://instagram.com/mr.marshanskiy">
                     <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="16px" style="margin-right: 5px;">
-                    <p class="link">mr.marshanskiy</p>
+                    <p class="cell__link">mr.marshanskiy</p>
                 </a>
-                <a class="soc__icon" target="_blank" href="https://t.me/mrMarshanskiy">
+                <a class="cell__icon" target="_blank" href="https://t.me/mrMarshanskiy">
                     <img src="../../../../assets/img/telegram-plane-brands.svg" alt="Telegram" height="16px" style="margin-right: 5px;">
-                    <p class="link">mrMarshanskiy</p>
+                    <p class="cell__link">mrMarshanskiy</p>
                 </a>
             </div>
         </div>
         <div class="cell">
             <div class="avatar__bg"></div>
              <div>
-                <p class="text">Богдан Москвитин</p>
-                <a class="soc__icon" target="_blank" href="https://instagram.com/moskvitin.bg">
+                <p class="cell__text">Богдан Москвитин</p>
+                <a class="cell__icon" target="_blank" href="https://instagram.com/moskvitin.bg">
                     <img src="../../../../assets/img/instagram-brands.svg" alt="Instagram" height="16px" style="margin-right: 5px;">
-                    <p class="link">moskvitin.bg</p>
+                    <p class="cell__link">moskvitin.bg</p>
                 </a>
-                <a class="soc__icon" target="_blank" href="https://t.me/bogdan_moskvitin">
+                <a class="cell__icon" target="_blank" href="https://t.me/bogdan_moskvitin">
                     <img src="../../../../assets/img/telegram-plane-brands.svg" alt="Telegram" height="16px" style="margin-right: 5px;">
-                    <p class="link">bogdan_moskvitin</p>
+                    <p class="cell__link">bogdan_moskvitin</p>
                 </a>
             </div>
         </div>
