--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,28 +1,18 @@
 $light: #FFFFFF;
 $dark: #212121;
 $blue: #2196F3;
-$lightdark: #0D47A1;
-.container {
-    width: 1200px;
-    margin: 50px auto 0 auto;
-}
-.title {
-    font-size: 48px;
-    padding-bottom: 20px;
-    user-select: none;
-    font-weight: bold;
-}
-.soc__icon {
+
+.social {
     text-decoration: none;
     display: flex;
     align-items: center;
     width: 160px;
-    img{filter: invert(97%) sepia(14%) saturate(663%) hue-rotate(175deg) brightness(102%) contrast(94%);}
 }
-.soc__icon:hover {
-    img{filter: invert(43%) sepia(90%) saturate(2135%) hue-rotate(187deg) brightness(103%) contrast(91%);}
-    p{color: $blue;}
+.social__text {
+    font-size: 20px;
+    user-select: none;
 }
+
 .box__cell {
     display: flex;
     flex-wrap: wrap;
@@ -36,7 +26,7 @@ $lightdark: #0D47A1;
     margin: 5px;
     border-radius: 5px;
     text-decoration: none;
-    background: $lightdark;
+    background: $blue;
 }
 .avatar__mr {
     width: 50px;
@@ -46,13 +36,22 @@ $lightdark: #0D47A1;
     background-image: url(../../../assets/img/mr.marshanskiy.jpg);
     background-size: contain;
 }
-.text {
+.cell__text {
     font-size: 20px;
     user-select: none;
+    color: $light;
 }
-.link {
+.cell__icon {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    width: 160px;
+    img{filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(102deg) brightness(103%) contrast(101%);}
+}
+.cell__link {
     font-size: 16px;
     text-decoration: none;
+    color: $light;
 }
 .avatar__bg {
     width: 50px;
@@ -62,11 +61,22 @@ $lightdark: #0D47A1;
     background-image: url(../../../assets/img/bg.moskvitin.jpg);
     background-size: contain;
 }
+
 .privacy_policy {
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
 }
-.privacy_policy:hover {
-    color: $blue;
+
+.lightIcon {
+    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(102deg) brightness(103%) contrast(101%);
+}
+.darkIcon {
+    filter: invert(9%) sepia(1%) saturate(1566%) hue-rotate(118deg) brightness(99%) contrast(89%);
+}
+.lightText {
+    color: $light;
+}
+.darkText {
+    color: $dark;
 }
