--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <p class="title">Добавить событие</p>
+    <h1>Добавить событие</h1>
 
     <div class="box">
-        <div style="width: 900px; height: 660px;">
+        <div class="map">
             <ya-map [center]="[45.05, 41.95]" [zoom]="12" (yaclick)="onMapClick($event)" [state]="{ controls: ['smallMapDefaultSet'] }">
                 <ya-placemark *ngFor="let place of places" 
                     [geometry]="[place.x, place.y]" 
