--- a/src/app/components/event-chat/event-chat.component.scss
+++ b/src/app/components/event-chat/event-chat.component.scss
@@ -31,7 +31,7 @@ p, span {
     border-radius: 5px;
 }
 .box__comment {
-    background-color: $lightdark;
+    background-color: $blue;
     margin: 5px 0;
     border-radius: 5px 5px 5px 0px;
     display: inline-block;
