--- a/src/app/components/events/events.component.scss
+++ b/src/app/components/events/events.component.scss
@@ -1,29 +1,7 @@
 $light: #FFFFFF;
 $dark: #212121;
 $blue: #2196F3;
-$lightdark: #0D47A1;
-.container {
-    width: 1200px;
-    margin: 50px auto 0 auto;
-}
-.title {
-    font-size: 48px;
-    user-select: none;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-.cell {
-    margin-bottom: 5px;
-    border-radius: 5px;
-    background: $lightdark;
-    width: 280px;
-    min-height: 110px;
-    padding: 10px;
-    cursor: pointer;
-}
-.cell:hover {
-    background: $blue;
-}
+
 .flex {
     display: flex;
     justify-content: space-between;
@@ -32,6 +10,22 @@ $lightdark: #0D47A1;
 .box {
     display: flex;
     justify-content: space-between;
+}
+.map {
+    width: 870px;
+    height: 660px;
+}
+.cell {
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background: $blue;
+    width: 280px;
+    min-height: 110px;
+    padding: 10px;
+    cursor: pointer;
+}
+.cell:hover {
+    background: $blue;
 }
 .text {
     font-size: 16px;
