--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <p class="title">Редактирование профиля</p>
+    <h1>Редактирование профиля</h1>
     <div class="flex">
         <div style="margin: 0 10px;">
             <img [src]="croppedImage" alt="" class="avatar">
-            <button mat-raised-button (click)="openDialog()" type="button" class="btn" color="primary">Установить аватарку</button>
+            <button mat-raised-button (click)="openDialog()" type="button" style="width: 250px;" color="primary">Установить аватарку</button>
         </div>
         <div style="margin: 0 10px;">
         
@@ -17,7 +17,7 @@
                         <mat-datepicker #picker2 color="primary"></mat-datepicker>
                     </mat-form-field>
         
-                    <div style="width: 250px; margin-bottom: 15px; color: rgba(255,255,255,.7);">
+                    <div style="width: 250px; margin-bottom: 15px;">
                         <mat-radio-group name="gender" formControlName="gender">
                             <div *ngFor="let gender of genders">
                                 <mat-radio-button color="primary" [style.margin.px]="'5'" value="{{gender.value}}" [checked]="gender.check">
@@ -47,13 +47,13 @@
                         </mat-autocomplete>
                     </mat-form-field>
 
-                    <button mat-raised-button class="btn" type="button" style="margin-bottom: 10px;" color="primary" [routerLink]="['../user-change']">Конфидециальность</button>
+                    <button mat-raised-button style="width: 250px; margin-bottom: 10px;" color="primary" type="button" [routerLink]="['../user-change']">Конфидециальность</button>
 
                     <div formArrayName="socials">
                         <div *ngFor="let social of getFormsControls()['controls']; let i = index">
             
                             <div style="display: flex;">
-                                <div class="creation__box_inputs" [formGroupName]="i">
+                                <div [formGroupName]="i">
                                     <mat-form-field class="example-full-width" appearance="fill" style="width: 220px;">
                                         <mat-label>Вставьте url</mat-label>
                                         <input matInput formControlName="social">
@@ -63,11 +63,11 @@
                             </div>
                         </div>
                     </div>
-                    <button mat-raised-button class="btn" type="button" style="margin-bottom: 10px;" color="primary" (click)="addSocial()">Добавить социальную сеть</button>
+                    <button mat-raised-button type="button" style="width: 250px; margin-bottom: 10px;" color="primary" (click)="addSocial()">Добавить социальную сеть</button>
                     
                     <div style="display: flex; width: 250px;">
-                        <button mat-raised-button class="btn" type="button" [routerLink]="['/user']" style="width: 100%;">Отмена</button>    
-                        <button mat-raised-button [disabled]="regForm.invalid"style="width: 100%;" class="btn" color="primary">Отправить</button>  
+                        <button mat-raised-button type="button" [routerLink]="['/user']" style="width: 100%;">Отмена</button>    
+                        <button mat-raised-button [disabled]="regForm.invalid"style="width: 100%;" color="primary">Отправить</button>  
                     </div>
                 </div>
             </form>
