--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="flex" style="align-items: center; justify-content: start; margin-bottom: 20px;">  
-        <p class="title" style="margin-right: 20px;">Ваш профиль</p>
-        <button mat-raised-button class="btn" type="button" [routerLink]="['../profile']">Редактировать</button>
+        <h1 style="margin-right: 20px;">Ваш профиль</h1>
+        <button mat-raised-button color="primary" type="button" [routerLink]="['../profile']">Редактировать</button>
     </div>
     <div class="flex">
         <img class="avatar" [src]="avatar"/>
