--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,11 @@ html, body {
         border-radius: 4px;
     }
 }
+h1 {
+    font-size: 48px;
+    user-select: none;
+}
+.container {
+    width: 1200px;
+    margin: 50px auto 0 auto;
+}
